--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
-      <script  src="src/phaser.js" ></script>
+      <script  src="lib/phaser.js" ></script>
       <script src="src/main.js" ></script>
 </body>
 </html>
